--- a/cart/index.html
+++ b/cart/index.html
@@ -1,1 +1,32 @@
 
+<!doctype html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Sleep Outside | Cart</title>
+
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+
+  <body>
+    <header class="divider" id="main-header"></header>
+    <main class="divider">
+      <section class="products">
+        <h2>My Cart</h2>
+
+        <ul class="product-list cart-container"></ul>
+        <div class="cart-footer hide">
+          <p class="cart-total">Total:</p>
+          <a href="../checkout/index.html" class="checkout-button">Checkout</a>
+        </div>
+      </section>
+    </main>
+
+    <footer id="main-footer"></footer>
+    <script src="../js/cart.js" type="module"></script>
+  </body>
+</html>
