--- a/checkout/index.html
+++ b/checkout/index.html
@@ -1,1 +1,98 @@
 
+<!doctype html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Sleep Outside | Checkout</title>
+
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+
+  <body>
+    <header class="divider" id="main-header"></header>
+
+    <main class="divider">
+      <h2>Review & Place your Order</h2>
+      <section class="products">
+        <form name="checkout">
+          <input type="hidden" name="orderDate" id="orderDate">
+
+          <fieldset class="customer-info">
+            <legend>Your Information</legend>
+            <div class="checkout_name">
+              <label for="fname">First Name</label>
+              <input type="text" name="fname" id="fname" required>
+              <label for="lname">Last Name</label>
+              <input type="text" name="lname" id="lname" required>
+            </div>
+            <div class="checkout__address">
+              <label for="street">Street Address</label>
+              <input type="text" name="street" id="street" required>
+              <label for="city">City</label>
+              <input type="text" name="city" id="city" required>
+              <label for="state">State</label>
+              <input type="text" name="state" id="state" required>
+              <label for="zip">Zip</label>
+              <input type="text" name="zip" id="zip" required>
+            </div>
+          </fieldset>
+
+          <fieldset class="customer-billing">
+            <legend>Payment</legend>
+            <div class="checkout__payment">
+              <p>Accepted Cards </p>
+              <div class="accepted__cards">
+                <i class="fa fa-cc-visa" style="color:navy;"></i>
+                <i class="fa fa-cc-amex" style="color:blue;"></i>
+                <i class="fa fa-cc-mastercard" style="color:red;"></i>
+                <i class="fa fa-cc-discover" style="color:orange;"></i>
+              </div>
+              <label for="cardNumber">Card Number</label>
+              <input type="text" name="cardNumber" id="cardNumber" required>
+              <label for="expiration">Expiration</label>
+              <input type="text" name="expiration" id="expiration" required>
+              <label for="code">CVV</label>
+              <input type="text" name="code" id="code" required>
+            </div>
+          </fieldset>
+
+          <fieldset class="checkout-summary">
+            <legend>Order Summary</legend>
+            <div class="order__summary">
+              <div class="order__summary__items">
+                <div>Items:&nbsp;</div>
+                <div id="num-items"></div>
+              </div>
+              <div class="order__summary__items">
+                <div>Subtotal:&nbsp;</div>
+                <div id="cartTotal"></div>
+              </div>
+              <div class="order__summary__items">
+                <div>Tax:&nbsp;</div>
+                <div id="tax"></div>
+              </div>
+              <div class="order__summary__items">
+                <div>Shipping:&nbsp;</div>
+                <div id="shipping"></div>
+              </div>
+              <div class="order__summary__items">
+                <div>Total:&nbsp;</div>
+                <div id="orderTotal"></div>
+              </div>
+            </div>
+          </fieldset>
+          <button type="submit" id="checkoutSubmit">Checkout</button>
+        </form>
+      </section>
+    </main>
+
+    <footer id="main-footer"></footer>
+
+    <script src="../js/checkout.js" type="module"></script>
+  </body>
+</html>
